Fix RequiredDocumentTypesGuard